Key error: DIK_LEFTBRACKET #60

--- a/dev_autopilot.ipynb
+++ b/dev_autopilot.ipynb
@@ -543,7 +543,9 @@
     "        'Key_LeftAlt':'LAlt',\n",
     "        'Key_RightAlt':'RAlt',\n",
     "        'Key_LeftControl':'LControl',\n",
-    "        'Key_RightControl':'RControl'\n",
+    "        'Key_RightControl':'RControl',\n",
+    "        'Key_LeftBracket':'LBracket',\n",
+    "        'Key_RightBracket':'RBracket'\n",
     "    }\n",
     "    \n",
     "    latest_bindings = get_latest_keybinds()\n",
